tests/syntax/good/instr_while2.c

void f () {

while (3) {
};
}

