tests/syntax/bad/instr_for_fail1.c

void f () {

for (32){
};

}

